--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -235,6 +235,8 @@ source "drivers/interconnect/Kconfig"
 
 source "drivers/counter/Kconfig"
 
+source "drivers/hdf/khdf/Kconfig"
+
 source "drivers/most/Kconfig"
 
 source "drivers/peci/Kconfig"
